⚙️ Attempts to fix chunk loading 3